# Job_board

./: LICENSE  README.md
conf/: default.env
src/: pyproject.toml
src/Board/: apps.py  models.py
src/Job_board/: asgi.py  settings.py  urls.py  wsgi.py
src/account/: admin.py  forms.py  models.py  urls.py  views.py
src/account/migrations/: 0001_initial.py  0002_alter_user_birthday.py  0003_alter_user_birthday.py
src/board/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/board/migrations/: 0001_initial.py  0002_rename_discription_vacancy_description_and_more.py  0003_alter_company_logo_alter_specialization_logo.py  0004_company_owner_application.py  0005_rename_telephone_application_phone_and_more.py
src/core/: views.py
src/job_board/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: 404.html  500.html  base_src.html  common.html  sent.html
src/templates/account/: auth.html  create_user.html
src/templates/board/: base.html  company_list.html  create_company.html  create_summary.html  create_vacancy.html  index.html  mycompany_detail.html  mycompany_detail_vacancies.html  mysummary_detail.html  mysummary_update.html  specialization_list.html  update_company.html  update_vacancy.html  vacancy_detail.html  vacancy_list.html
src/templates/includes/: header.html  interview.html  vacancy.html
