[tool.poetry]
name = "board"
version = "0.1.0"
description = ""
authors = ["LinkerXXX <monolit621@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
django-environ = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
